# cluzzy

./: Cluzzy.cabal  Makefile  README.md
Cluzzy/: .Defuzzifier.hs.swp  Config.hs  Controller.hs  Defuzzifier.hs  Fuzzifier.hs  FuzzySet.hs  Relation.hs  Rules.hs  Testbenches.hs
Cluzzy/Testbenches/: FLCTestbench.hs  FuzzifierTestbench.hs
