name:                Cluzzy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Fuzzy logic hardware design in CλaSH.

license:             GPL-3
license-file:        LICENSE

author:              Nashwan Azhari
maintainer:          aznashwan@yahoo.com

category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
library
  exposed-modules:     Fuzzifier, Config, Testbenches.FuzzifierTestbench,
                       Testbenches, Rules, FuzzySet, Controller, Defuzzifier

  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings, FlexibleContexts,
                       TypeSynonymInstances, OverlappingInstances
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9, clash-prelude, mtl, containers,
                       data-default

  ghc-options:         -Wall
  
  -- Directories containing source files.
  hs-source-dirs:      Cluzzy
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
